# bottle-breaker

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE-MIT  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql  setup_db.py
.github/workflows/: linting.yml
bottle_breaker/: __main__.py  _base_db.py  access_control.py  app.py  posts.py  sample_database.db
bottle_breaker/templates/: 401.html  404.html  base.html  index.html  login.html  settings.html  user_profile.html
bottle_breaker/tests/: __init__.py  test_access_control.py  test_posts.py
