# General Info

[project]
name = "bottle_breaker"
authors = [{ name = "Alexander L. Hayes", email = "alexander@batflyer.net" }]
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"

# Project dependencies
dependencies = [
    "Flask==2.3.2",
    "Flask-Login==0.6.2",
    "Flask-WTF==1.1.1",
    "WTForms==3.0.1",
]

# Development dependencies
[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "isort>=5.12.0",
    "pip-tools>=6.12.3",
    "ruff>=0.0.259",
    "pytest>=7.2.2",
    "pytest-cov>=4.0.0",
]

# Specifying py-modules should help prevent an edge case when running pip-compile
# https://github.com/jazzband/pip-tools/issues/1711
[tool.setuptools]
py-modules = []

[tool.ruff]
ignore = ["E501"]
exclude = [
    ".env",
    "venv",
    ".venv",
    "vendor",
    "build",
]

[tool.isort]
profile = "black"
line_length = 79
skip = ["./env", "venv", ".venv", "vendor", "build"]

[tool.black]
line-length = 79
extend-exclude = '''
/(
  | .env
  | .venv
  | venv
  | vendor
  | build
)/
'''
